# NUCLEO-H7A3ZI-Q

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
__demo/: CMakeLists.txt
__linker/: llvm_arm.ld
__vectors/: __vectors.c  __vectors_llvm.h
cmake/: libcore-hal.txt
cubemx/: .mxproject  nucleo-h7a3zi-q.ioc
cubemx/Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
cubemx/Core/Src/: gpio.c  main.c  stm32h7xx_it.c  sysmem.c
